# learning-fastapi

./: pyproject.toml
src/learning_fastapi/: __init__.py  main.py
template/: index.html
