[project]
name = "learning-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marjan Ahmed", email = "marjan.ahmed08@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.35.0",
]

[project.scripts]
learning-fastapi = "learning_fastapi:main"
start = "learning_fastapi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
